Update the unit tests and junit. Now ran on J16 locally.