@@ -515,4 +515,12 @@ tasks.withType(GenerateModuleMetadata) {
     enabled = false
 }
 
-
+tasks.withType(Test.class, { task ->
+    task.doFirst {
+        task.jvmArgs = [
+                '--add-opens', 'java.base/java.util.stream=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                '--add-opens', 'java.xml/jdk.xml.internal=ALL-UNNAMED'
+        ]
+    }
+})
